--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,1 +1,29 @@
-<p>carousel works!</p>
+<div class="container">
+  <div [ngStyle]="{
+    'border-top':'5px solid lime',
+    width:counterValue,
+    'transition':'all 0.1s linear'
+  }">
+
+  </div>
+
+  <div class="header">
+    Document ({{currentIndex + 1}} / {{slides.length}})
+  </div>
+  <div class="carousel">
+    <ul class="list-ul">
+      <li class="list-li" *ngFor="let slide of slides; let i=index">
+        <ng-container *ngIf="i===currentIndex" >
+          <img [alt]="slide.name" class="carousel-image" [src]="slide.src" @carouselAnimation>
+        </ng-container>
+      </li>
+    </ul>
+
+    <div>
+      <button class="next" (click)="next()">Next</button>
+    </div>
+    <div>
+      <button class="prev" (click)="prev()">Prev</button>
+    </div>
+  </div>
+</div>
